@@ -936,6 +936,9 @@ int point_in_multipolygon_rtree(RTREE_NODE **root, int polyCount, int *ringCount
 
 	POSTGIS_DEBUGF(2, "point_in_multipolygon_rtree called for %p %d %p.", root, polyCount, point);
 
+	/* empty is not within anything */
+	if (lwpoint_is_empty(point)) return -1;
+
 	getPoint2d_p(point->point, 0, &pt);
 	/* assume bbox short-circuit has already been attempted */
 
@@ -1044,6 +1047,9 @@ int point_in_multipolygon(LWMPOLY *mpolygon, LWPOINT *point)
 	POINT2D pt;
 
 	POSTGIS_DEBUG(2, "point_in_polygon called.");
+
+	/* empty is not within anything */
+	if (lwpoint_is_empty(point)) return -1;
 
 	getPoint2d_p(point->point, 0, &pt);
 	/* assume bbox short-circuit has already been attempted */
