@@ -461,3 +461,4 @@ ERROR:  Line has no points
 #5139|1000000
 ERROR:  Geometry contains invalid coordinates
 ERROR:  Geometry contains invalid coordinates
+#5627|t
